# SimpleDoc

./: .gitignore  install.sh  main.py  pyproject.toml
evaluation/: evaluate_responses.py
modules/: step03_target_page_qa.py
preprocess/: generate_embeddings.py  generate_summaries.py
scripts/: preprocess_summaries.sh  run_gpt_eval.sh  run_simpledoc.sh
