[project]
name = "simpledoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag2[openai]>=0.10.1",
    "colpali-engine",
    "flashinfer-python>=0.5.3",
    "hf-transfer>=0.1.9",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "pdfminer-six==20250506",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
    "qwen-agent[rag]>=0.0.31",
    "retry>=0.9.2",
    "torch==2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.45.0",
    "vllm==0.10.2",
]

[tool.uv.sources]
colpali-engine = { git = "https://github.com/illuin-tech/colpali" }
